--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,10 @@
     margin-left: 10px;
     margin-top: 7px;
 }
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
